--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,16 @@
 
         />
 
+    <Button
+        android:layout_below="@+id/Cancel_bt"
+        android:id="@+id/Cancel_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:text="Dismiss"
+       
+
+        />
+
 </RelativeLayout>
